plugins {
    id("java-library")
    id("java")
}


group = "com.continuum.vendor.service"
version = "0.0.3"

repositories {
    mavenCentral()
}
dependencies {

    implementation group: 'org.hibernate', name: 'hibernate-annotations', version: '3.5.6-Final'
    implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.2.5'
    implementation("org.springframework.boot:spring-boot-starter-json:2.3.1.RELEASE")
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'ma.glasnost.orika:orika-core:1.5.4'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'org.hibernate.orm:hibernate-core:6.0.0.Final'
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '2.1.1'



    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.0'

    testImplementation(platform("org.junit:junit-bom:5.9.1"))
    testImplementation("org.junit.jupiter:junit-jupiter")

    implementation("org.projectlombok:lombok:1.18.30")
    testImplementation("org.projectlombok:lombok:1.18.30")
    annotationProcessor("org.projectlombok:lombok:1.18.30")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.30")

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
}

java{
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaExec) {
    jvmArgs(['--add-opens=java.base/java.lang=ALL-UNNAMED'])
}
tasks.named('test') {
    useJUnitPlatform()
}